[package]
name = "hyper_test"
version = "0.1.0"
authors = ["loo.maclin <loo.maclin@protonmail.com>"]

[dependencies]
futures = "0.1.9"
pretty_env_logger = "0.1.0"
hyper = { git = "https://github.com/polachok/hyper.git", branch = "bench" }
log = "0.3.6"
serde = "0.8.0"
serde_derive = "0.8.0"
serde_json = "0.8.0"
net2 = "0.2"
fringe = "1.2.1"
scheduler = "0.1"
tokio-core = "0.1.3"
thread_local = "0.3.2"
juniper = "0.6.1"
tarantool = { git = "https://github.com/LooMaclin/tarantool_rs.git", branch = "master" }